kubernetes/frontendproxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: <certificate-arn>
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/target-type: ip
  name: frontend-proxy
  namespace: default
spec:
  ingressClassName: alb
  rules:
  - host: www.yashecommerce.shop
    http:
      paths:
      - backend:
          service:
            name: opentelemetry-demo-frontendproxy
            port:
              number: 8080
        path: /
        pathType: Prefix
  - host: yashecommerce.shop
    http:
      paths:
      - backend:
          service:
            name: opentelemetry-demo-frontendproxy
            port:
              number: 8080
        path: /
        pathType: Prefix
